Bug 250457 Compatibility of URLs encoded in content.xml, artifacts.xml